jerry-core/parser/js/new-parser/tests/js/object-literal-set.js
/* This test contains object literal parser tests. */

var a = { set set() {} }
